crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_cr_in_list_item.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1785
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `method`
  - One of: 

    - `"a"`: First line.  
      Second line. 
    - `"b"`: Use method B. 

:::
