crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_nested_list.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - A basic argument.

- - `method`
  - The method to use: 

    - `"a"`: Use method A, the default. 
    - `"b"`: Use method B. 

    Additional details after the list.

:::
