crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_preformatted.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1718
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - Description with code: 

    ```

      result <- foo(x)
      print(result)
    ```

:::
