crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_python_code_block.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1745
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `fn`
  - The processing function to use: 

    ```python
    def process(x):
        return x * 2

    ```

:::
