crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_table_with_tabular.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - The argument. See the table: 

    |  Col1  |  Col2  |
    |:---|:---|
    |  a  |  1  |
    |  b  |  2  |

:::
