crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_with_tabular.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

- **`x`**

  The argument. See the table: 

  |  Col1  |  Col2  |
  |:---|:---|
  |  a  |  1  |
  |  b  |  2  |
