crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__cite_tag.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Cite Test

## Description

 See _R Core Team (2024)_ for details.
