crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__doi_tag.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# DOI Test

## Description

 See the paper at [doi:10.1234/example.2024](https://doi.org/10.1234/example.2024).
